final friday save
documentation and component updates

--- a/src/0-about/0-about.stories.mdx
+++ b/src/0-about/0-about.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Introduction"
+	title="About/About"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,13 +27,13 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
-												Introduction <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
+												About <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
@@ -51,47 +51,9 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<p>
-									Welcome to ACT Government's Website Design System (ACT WDS) for digital experiences and websites. The purpose of this is to provide a consistent, accessible and
-									inclusive digital experience across ACT Government digital services.
-								</p>
-								<p>
-									The primary purpose of this website is to provide coded components primarily for developers to utilise. To see examples of Dos and Don'ts for particular
-									components please visit the{" "}
-									<a href="https://www.figma.com/file/07TWQyWk4YAEVjhxNmFZ6L/ACT-Design-System?node-id=2289%3A40355&t=hgMqmHjHIeYWiEl6-3" target="_blank">
-										ACT Website Design System Figma
-									</a>
-									.
-								</p>
-								<p>
-									With the ACT Government{" "}
-									<a href="https://www.act.gov.au/branding" target="_blank">
-										Brand Guardian
-									</a>{" "}
-									as its foundation, the system consists of working code, design tools, resources and human interface guidelines.
-								</p>
-								<p>
-									If you have any questions, notice issues or bugs, or need to discuss anything relating to the ACT WDS reach out to{" "}
-									<a href="mailto:jack.walsh@act.gov.au" target="_blank">
-										jack.walsh@act.gov.au
-									</a>
-									.
-								</p>
+								<p>Helping teams create a consistent, accessible and inclusive digital experience across ACT Government websites and digital services.</p>
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="guidelines-overview--page">
-										<div class="act-card__container">
-											<div class="act-card__content">
-												<div class="act-card__icon">
-													<i class="fa-solid fa-scale-balanced"></i>
-												</div>
-												<div class="act-card__title">Guidelines</div>
-												<div class="act-card__cta">
-													<i class="fa-solid fa-arrow-right"></i>
-												</div>
-											</div>
-										</div>
-									</LinkTo>
-									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="design-tokens-overview--page">
+									<LinkTo className="act-card act-card__homepage act-card__feature--none" kind="design-overview--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -157,6 +119,27 @@ import LinkTo from "@storybook/addon-links/react";
 										</div>
 									</LinkTo>
 								</div>
+							</div>
+						</div>
+					</div>
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>What is the design system</h2>
+								<p>
+									The design system is used to create customer-centred digital products and services that meet branding and accessibility guidelines. It’s a collection of
+									repeatable components including usage and interaction guidance.
+								</p>
+								<h2>Who should use it</h2>
+								<p>
+									The Design System should be used by all directorates and agencies to help meet ACT Government{" "}
+									<a href="https://www.act.gov.au/branding" target="_blank" title="ACT Brand Guardian">
+										design and brand guidelines
+									</a>{" "}
+									and digital standards. The components are UI building blocks, providing a consistent approach to UI and UX designers and engineers.
+								</p>
+								<h2>How it works</h2>
+								<p>View core styles, browse components, read guidance on how they can be used, and follow links to documented UI kits in Figma and HTML.</p>
 							</div>
 						</div>
 					</div>
