--- a/src/2-design/4-design-tokens/1-breakpoints.stories.mdx
+++ b/src/2-design/4-design-tokens/1-breakpoints.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Breakpoints"
+	title="Design/Design Tokens/Breakpoints"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,17 +27,17 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-breakpoints--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-breakpoints--page">
 												Breakpoints <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -59,7 +59,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<p>A 'breakpoint' is a predefined viewport width. This Design System utilises four breakpoints.</p>
 								<p>At each breakpoint we make adjustments to the interface create a better user experience on devices within those widths.</p>
 								<div className="act-img">
-									<img src="/images/2-design-tokens-breakpoints-1.png" alt="Illustration of the available breakpoints" />
+									<img src="/images/2-design-breakpoints-1.png" alt="Illustration of the available breakpoints" />
 									<div className="act-img__description act-p-small">
 										<i class="fa-solid fa-circle-info"></i> Illustration of the available breakpoints
 									</div>
