--- a/src/2-design/4-design-tokens/2-colours.stories.mdx
+++ b/src/2-design/4-design-tokens/2-colours.stories.mdx
@@ -1,12 +1,12 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Colours"
+	title="Design/Design Tokens/Colours"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,17 +27,17 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-colours--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-colours--page">
 												Colours <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
