--- a/src/4-components/a2-alerts/a21-alert-global/a21-docs.stories.mdx
+++ b/src/4-components/a2-alerts/a21-alert-global/a21-docs.stories.mdx
@@ -27,7 +27,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -86,7 +86,8 @@ import LinkTo from "@storybook/addon-links/react";
 								</ul>
 								<h4>Don't</h4>
 								<ul>
-									<li>Do not stack Global Alerts, limit of one per page unless in the case of an emergency</li>
+									<li>Do not stack Global Alerts</li>
+									<li>Additional Global Alerts can be stacked in an emergency situation only</li>
 								</ul>
 							</div>
 						</div>
