--- a/src/4-components/c2-content/c2-docs.stories.mdx
+++ b/src/4-components/c2-content/c2-docs.stories.mdx
@@ -27,7 +27,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -59,6 +59,12 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-box">
 								<h3>Breaker</h3>
 								<p>The breaker component can be used on content pages to help visually break up the page as well as calling out important information.</p>
+								<div className="act-img">
+									<img src="/images/breaker_example.png" alt="Illustration of how a breaker renders within the design system" />
+									<div className="act-img__description act-p-small">
+										<i class="fa-solid fa-circle-info"></i> Illustration of how a breaker renders within the design system
+									</div>
+								</div>
 								<h4>Do</h4>
 								<ul>
 									<li>Keep breakers short and succinct, one sentence length</li>
@@ -134,6 +140,7 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-box">
 								<h3>Service Card</h3>
 								<p>Service cards are used to display up to date information for helpful services.</p>
+								<p>It is recommended to use only one primary link, with a secondary link available for phone numbers or other contact information if necessary.</p>
 								<h4>Do</h4>
 								<ul>
 									<li>Desktop and tablet to use ‘large’ variant and mobile to use ‘small’ variant</li>
