--- a/src/5-patterns/0-overview.stories.mdx
+++ b/src/5-patterns/0-overview.stories.mdx
@@ -27,7 +27,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -55,7 +55,7 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<h2>Patterns</h2>
-								<p>A collection of pre-built patterns generated using tokens and components.</p>
+								<p>Patterns in a design system are prebuilt combinations of components that work together to create a consistent visual language across ACT products.</p>
 								<div className="act-card-grid">
 									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="patterns-card-grids-default-card-grid--default-card-grid">
 										<div className="act-card__container">
