--- a/src/0-about/2-new-components.stories.mdx
+++ b/src/0-about/2-new-components.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Our ecosystem"
+	title="About/Requesting a new component"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,18 +27,18 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-our-ecosystem--page">
-												Our ecosystem <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-requesting-a-new-component--page">
+												Requesting a new component <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Our ecosystem</h1>
+								<h1>Requesting a new component</h1>
 							</div>
 						</div>
 					</div>
@@ -50,42 +50,7 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__grid">
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
-							<div className="act-box">
-								<div className="act-img">
-									<img src="/images/0-system-stack-1.png" alt="Illustration of the current project stack" />
-									<div className="act-img__description act-p-small">
-										<i class="fa-solid fa-circle-info"></i> Illustration of the current project stack
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Notion</h2>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Figma</h2>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Storybook.js</h2>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>GitHub</h2>
-							</div>
+							<div className="act-box">&nbsp;</div>
 						</div>
 					</div>
 				</div>
