--- a/src/0-about/3-technical-info.stories.mdx
+++ b/src/0-about/3-technical-info.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Technical Info"
+	title="About/Technical Info"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,12 +27,12 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-technical-info--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-technical-info--page">
 												Technical Info <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -48,6 +48,77 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex">
 			<div className="act-flex__container">
 				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<p>
+									Below is a summary of the latest version, commits and sizing. If you require a new component or are having troubles finding a component, please contact{" "}
+									<a href="mailto:CMTEDDWebmaster@act.gov.au" target="_blank" title="CMTEDDWebmaster@act.gov.au">
+										CMTEDDWebmaster@act.gov.au
+									</a>
+									.
+								</p>
+								<div className="act-table-container">
+									<table className="act-table">
+										<thead>
+											<tr>
+												<th>Item</th>
+												<th>Value</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Version</td>
+												<td>
+													<img src="https://img.shields.io/github/package-json/v/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Commit activity</td>
+												<td>
+													<img src="https://img.shields.io/github/commit-activity/w/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+													<br />
+													<img src="https://img.shields.io/github/commit-activity/m/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+													<br />
+													<img src="https://img.shields.io/github/commit-activity/y/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Last commit</td>
+												<td>
+													<img src="https://img.shields.io/github/last-commit/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Contributors</td>
+												<td>
+													<img src="https://img.shields.io/github/contributors/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Repo size</td>
+												<td>
+													<img src="https://img.shields.io/github/repo-size/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>Code size</td>
+												<td>
+													<img src="https://img.shields.io/github/languages/code-size/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+											<tr>
+												<td>File count</td>
+												<td>
+													<img src="https://img.shields.io/github/directory-file-count/ACTGov-Design-System/ACT-Website-Design-System?style=flat-square" />
+												</td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
@@ -108,12 +179,12 @@ import LinkTo from "@storybook/addon-links/react";
 								<p>The _core folder contains the global SCSS of the design system.</p>
 								<h4>_docs</h4>
 								<p>The _docs folder contains reusable components suitable for use in documentation pages.</p>
-								<h4>0-system</h4>
-								<p>The 0-system folder contains documentation pertaining to the overall design system.</p>
+								<h4>0-about</h4>
+								<p>The 0-about folder contains documentation pertaining to the overall design system.</p>
 								<h4>1-guidelines</h4>
 								<p>The 1-guidelines folder contains guidance and templates for creating and maintaining content and designs with the ACT WDS.</p>
-								<h4>2-design-tokens</h4>
-								<p>The 2-design-tokens folder contains all of the design tokens the following folders consume to generate components and patterns.</p>
+								<h4>2-design</h4>
+								<p>The 2-design folder contains all of the design tokens the following folders consume to generate components and patterns.</p>
 								<h4>3-layout</h4>
 								<p>The 3-layout folder contains documentation and examples of how pages are structures and displayed within the ACT WDS.</p>
 								<h4>4-components</h4>
