--- a/src/1-guidelines/branding.stories-delete.mdx
+++ b/src/1-guidelines/branding.stories-delete.mdx
@@ -27,7 +27,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -56,7 +56,7 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h2>Introduction</h2>
+								<h2>About</h2>
 							</div>
 						</div>
 					</div>
