--- a/src/1-guidelines/content.stories-delete.mdx
+++ b/src/1-guidelines/content.stories-delete.mdx
@@ -1,12 +1,12 @@
-import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
-import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { linkTo } from "@storybook/addon-links";
 import Masthead from "../_docs/masthead";
 import AoC from "../_docs/aoc";
 import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Guidelines/Guidance"
+	title="Guidelines/Content"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,19 +27,23 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-guidance--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview--page">
 												Guidelines <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview-content--page">
+												Content <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Guidelines</h1>
-								<p></p>
+								<h1>Content</h1>
 							</div>
 						</div>
 					</div>
@@ -52,18 +56,22 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<h3></h3>
-								<p></p>
+								<p>Used to help break up content by displaying it visually in columns</p>
+								<div className="act-img">
+									<img src="/images/content_blocks.png" alt="Illustration of the available content width options" />
+									<div className="act-img__description act-p-small">
+										<i class="fa-solid fa-circle-info"></i> Illustration of the available content width options
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-    		</div>
-    	</div>
-    </main>
-    <footer className="act-footer">
-    	<AoC />
-    	<Footer />
-    </footer>
-
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
