--- a/src/1-guidelines/glossary.stories-delete.mdx
+++ b/src/1-guidelines/glossary.stories-delete.mdx
@@ -1,12 +1,12 @@
-import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
-import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
-import Masthead from "../../_docs/masthead";
-import AoC from "../../_docs/aoc";
-import Footer from "../../_docs/footer";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { linkTo } from "@storybook/addon-links";
+import Masthead from "../_docs/masthead";
+import AoC from "../_docs/aoc";
+import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Components/Tooltips/Guidance"
+	title="Guidelines/Glossary"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -32,19 +32,18 @@ import LinkTo from "@storybook/addon-links/react";
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-overview--page">
-												Components <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview--page">
+												Guidelines <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="components-tooltips-overview--page">
-												Tool tips <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-glossary--page">
+												Glossary <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Tool tips</h1>
-								<p>Tooltips help provide additional instructions to the user. It reveals the content when hovered over.</p>
+								<h1>Glossary</h1>
 							</div>
 						</div>
 					</div>
@@ -57,16 +56,16 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
+								<h2>About</h2>
 							</div>
 						</div>
 					</div>
 				</div>
-    		</div>
-    	</div>
-    </main>
-    <footer className="act-footer">
-    	<AoC />
-    	<Footer />
-    </footer>
-
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
