--- a/src/2-design/1-figma-ui-kit.stories.mdx
+++ b/src/2-design/1-figma-ui-kit.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Guidelines/Glossary"
+	title="Design/Figma UI Kit"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,23 +27,23 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview--page">
-												Guidelines <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
+												Design <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-glossary--page">
-												Glossary <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
+												Figma UI Kit <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Glossary</h1>
+								<h1>Figma UI Kit</h1>
 							</div>
 						</div>
 					</div>
@@ -55,9 +55,7 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__grid">
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h2>Introduction</h2>
-							</div>
+							<div className="act-box">&nbsp;</div>
 						</div>
 					</div>
 				</div>
