--- a/src/2-design/4-design-tokens/0-design-tokens.stories.mdx
+++ b/src/2-design/4-design-tokens/0-design-tokens.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Overview"
+	title="Design/Design Tokens/Design Tokens"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,12 +27,17 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
+												Design <i className="fa-solid fa-angle-right"></i>
+											</LinkTo>
+										</li>
+										<li className="act-breadcrumbs__crumb act-h6">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -65,7 +70,7 @@ import LinkTo from "@storybook/addon-links/react";
 								</p>
 								<h2>ACT WDS Design Tokens</h2>
 								<div className="act-card-grid">
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-breakpoints--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-breakpoints--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -79,7 +84,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-colours--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-colours--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -93,7 +98,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-interactions--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-interactions--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -107,7 +112,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-radius--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-radius--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -121,7 +126,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-shadows--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-shadows--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -135,7 +140,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-spacing--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-spacing--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
@@ -149,7 +154,7 @@ import LinkTo from "@storybook/addon-links/react";
 											</div>
 										</div>
 									</LinkTo>
-									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-tokens-typography--page">
+									<LinkTo className="act-card act-card__primary act-card__feature--icon" kind="design-typography--page">
 										<div class="act-card__container">
 											<div class="act-card__content">
 												<div class="act-card__icon">
