--- a/src/2-design/4-design-tokens/4-radius.stories.mdx
+++ b/src/2-design/4-design-tokens/4-radius.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Shadows"
+	title="Design/Design Tokens/Radius"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,23 +27,23 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-shadows--page">
-												Shadows <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-radius--page">
+												Radius <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Shadows</h1>
+								<h1>Radius</h1>
 							</div>
 						</div>
 					</div>
@@ -56,11 +56,11 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<p>There is a single box-shadown option in this system. The default is no shadow for all components.</p>
+								<p>There are several border-radius options in this system. The default is Radius 0 for all components.</p>
 								<div className="act-img">
-									<img src="/images/2-design-tokens-shadow-1.png" alt="Illustration of the available shadow variable" />
+									<img src="/images/2-design-radius-1.png" alt="Illustration of the available radius variables" />
 									<div className="act-img__description act-p-small">
-										<i class="fa-solid fa-circle-info"></i> Illustration of the available shadow variable
+										<i class="fa-solid fa-circle-info"></i> Illustration of the available radius variables
 									</div>
 								</div>
 								<div className="act-table-container">
@@ -75,15 +75,51 @@ import LinkTo from "@storybook/addon-links/react";
 										</thead>
 										<tbody>
 											<tr>
-												<td>Shadow 1</td>
+												<td>Radius 0</td>
 												<td>
-													<code>0px 8px 20px rgba(0, 0, 0, 0.15)</code>
+													<code>0px</code>
 												</td>
 												<td>
-													<code className="sass-var">$act-shadow__one</code>
+													<code className="sass-var">$act-radius__desktop-0</code>
 												</td>
 												<td>
-													<code className="sass-var">map-get($act-shadow, "one")</code>
+													<code className="sass-var">map-get($act-radius, "desktop-0")</code>
+												</td>
+											</tr>
+											<tr>
+												<td>Radius 4</td>
+												<td>
+													<code>4px</code>
+												</td>
+												<td>
+													<code className="sass-var">$act-radius__desktop-4</code>
+												</td>
+												<td>
+													<code className="sass-var">map-get($act-radius, "desktop-4")</code>
+												</td>
+											</tr>
+											<tr>
+												<td>Radius 16</td>
+												<td>
+													<code>16px</code>
+												</td>
+												<td>
+													<code className="sass-var">$act-radius__desktop-16</code>
+												</td>
+												<td>
+													<code className="sass-var">map-get($act-radius, "desktop-16")</code>
+												</td>
+											</tr>
+											<tr>
+												<td>Radius Full</td>
+												<td>
+													<code>50%</code>
+												</td>
+												<td>
+													<code className="sass-var">$act-radius__desktop-full</code>
+												</td>
+												<td>
+													<code className="sass-var">map-get($act-radius, "desktop-full")</code>
 												</td>
 											</tr>
 										</tbody>
