--- a/src/2-design/4-design-tokens/5-shadows.stories.mdx
+++ b/src/2-design/4-design-tokens/5-shadows.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Guidelines/Content"
+	title="Design/Design Tokens/Shadows"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,23 +27,23 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview--page">
-												Guidelines <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
+												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="guidelines-overview-content--page">
-												Content <i className="fa-solid fa-angle-right"></i>
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-shadows--page">
+												Shadows <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 									</ul>
 								</div>
-								<h1>Content</h1>
+								<h1>Shadows</h1>
 							</div>
 						</div>
 					</div>
@@ -56,12 +56,38 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
 						<div className="act-col__cw-12">
 							<div className="act-box">
-								<p>Used to help break up content by displaying it visually in columns</p>
+								<p>There is a single box-shadown option in this system. The default is no shadow for all components.</p>
 								<div className="act-img">
-									<img src="/images/content_blocks.png" alt="Illustration of the available content width options" />
+									<img src="/images/2-design-shadow-1.png" alt="Illustration of the available shadow variable" />
 									<div className="act-img__description act-p-small">
-										<i class="fa-solid fa-circle-info"></i> Illustration of the available content width options
+										<i class="fa-solid fa-circle-info"></i> Illustration of the available shadow variable
 									</div>
+								</div>
+								<div className="act-table-container">
+									<table className="act-table">
+										<thead>
+											<tr>
+												<th>Token Name</th>
+												<th>Value</th>
+												<th>Sass Variable</th>
+												<th>Sass Map</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<td>Shadow 1</td>
+												<td>
+													<code>0px 8px 20px rgba(0, 0, 0, 0.15)</code>
+												</td>
+												<td>
+													<code className="sass-var">$act-shadow__one</code>
+												</td>
+												<td>
+													<code className="sass-var">map-get($act-shadow, "one")</code>
+												</td>
+											</tr>
+										</tbody>
+									</table>
 								</div>
 							</div>
 						</div>
