--- a/src/2-design/4-design-tokens/6-spacing.stories.mdx
+++ b/src/2-design/4-design-tokens/6-spacing.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Spacing"
+	title="Design/Design Tokens/Spacing"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,17 +27,17 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-spacing--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-spacing--page">
 												Spacing <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -60,7 +60,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<p>Spacing follows a 4-pixel unit in this system, with each spacing variable evenly divisible by 4.</p>
 								<p>Spacing in this system is available as both Sass Variables and Maps.</p>
 								<div className="act-img">
-									<img src="/images/2-design-tokens-spacing-1.png" alt="Illustration of the available spacing variables" />
+									<img src="/images/2-design-spacing-1.png" alt="Illustration of the available spacing variables" />
 									<div className="act-img__description act-p-small">
 										<i class="fa-solid fa-circle-info"></i> Illustration of the available spacing variables
 									</div>
