--- a/src/2-design/4-design-tokens/7-typography.stories.mdx
+++ b/src/2-design/4-design-tokens/7-typography.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="Design Tokens/Typography"
+	title="Design/Design Tokens/Typography"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -27,17 +27,17 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-overview--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-overview--page">
 												Design Tokens <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-tokens-typography--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="design-typography--page">
 												Typography <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -147,6 +147,30 @@ import LinkTo from "@storybook/addon-links/react";
 										</tbody>
 									</table>
 								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div className="act-flex">
+			<div className="act-flex__container">
+				<div className="act-flex__grid">
+					<div className="act-flex__row">
+						<div className="act-col__cw-12">
+							<div className="act-box">
+								<h2>Icons</h2>
+								<p>The ACT Government Design System utilises Font Awesome to render icons.</p>
+							</div>
+						</div>
+						<div className="act-col__cw-6">
+							<div className="act-box">
+								<h3>Font Awesome</h3>
+								<p>
+									<a href="https://fontawesome.com/" target="_blank" title="Font Awesome">
+										Font Awesome <i className="fa-solid fa-arrow-up-right-from-square"></i>
+									</a>
+								</p>
 							</div>
 						</div>
 					</div>
