--- a/src/4-components/c1-cards/c1-docs.stories.mdx
+++ b/src/4-components/c1-cards/c1-docs.stories.mdx
@@ -27,7 +27,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<div className="act-breadcrumbs">
 									<ul className="act-breadcrumbs__container">
 										<li className="act-breadcrumbs__crumb act-h6">
-											<LinkTo className="act-breadcrumbs__crumb__link" kind="system-introduction--page">
+											<LinkTo className="act-breadcrumbs__crumb__link" kind="about-about--page">
 												Design System <i className="fa-solid fa-angle-right"></i>
 											</LinkTo>
 										</li>
@@ -148,6 +148,7 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-flex__row">
     					<div className="act-col__cw-12">
     						<div className="act-box">
+									<p>To view all the different variations of cards, please use the controls on the component page.</p>
     							<LinkTo
     								className="act-button act-button__primary act-button__default act-button__icon-left act-button__primary-undefined"
     								kind="components-cards-docs"
