storybook docs updates

--- a/src/0-about/1-what-is-the-ds.stories.mdx
+++ b/src/0-about/1-what-is-the-ds.stories.mdx
@@ -70,7 +70,7 @@ import LinkTo from "@storybook/addon-links/react";
 								</p>
 								<h2>Acknowledgement</h2>
 								<p>
-									We acknowledge the guidance supporting this design system has used the NSW Government{" "}
+									We acknowledge the advice and guidance supporting this design system has incorporated the NSW Government….{" "}
 									<a href="https://www.digital.nsw.gov.au/delivery/digital-service-toolkit/design-system" target="_blank" title="NSW Design System">
 										Design System
 									</a>{" "}
@@ -83,8 +83,8 @@ import LinkTo from "@storybook/addon-links/react";
 								<h2>Benefits</h2>
 								<h4>Build faster and at scale</h4>
 								<p>
-									The design system saves time and money with an ecosystem that is made to work together. It features a library of styles, components and templates, and well as
-									advice and guidance for how and when to use each one. Delivered in ready to go UI and code kits, means teams don’t need to build from scratch.
+									The design system saves time and money with an ecosystem that is made to work together. It features a library of styles, components and templates, as well as
+									advice and guidance for how and when to use each one.
 								</p>
 								<h4>Out-of-the-box brand and accessibility compliance</h4>
 								<p>
