--- a/src/2-design/0-getting-started.stories.mdx
+++ b/src/2-design/0-getting-started.stories.mdx
@@ -56,8 +56,11 @@ import LinkTo from "@storybook/addon-links/react";
 							<div className="act-box">
 								<h2>Getting started</h2>
 								<p>
-									The ACT Government Design Practice should be used to guide best practice design and delivery. It is a toolkit to assist staff across ACT Government build human
-									centred products and services.
+									The ACT Government{" "}
+									<a href="https://actgovernment.sharepoint.com/sites/extranet-DesignPractice" target="_blank">
+										Design Practice
+									</a>{" "}
+									should be used to guide best practice design and delivery. It is a toolkit to assist staff across ACT Government build human centred products and services.
 								</p>
 								<p>
 									Use the ACT Government Design System to create customer-centred websites and other digital products and services that meet branding and WCAG 2.1 AA accessibility
