--- a/src/2-design/2-extending-the-ds.stories.mdx
+++ b/src/2-design/2-extending-the-ds.stories.mdx
@@ -73,6 +73,12 @@ import LinkTo from "@storybook/addon-links/react";
 									Instead of starting from scratch, utilise already built components and customise to meet your user need. This helps to create consistent services for users and
 									saves time and effort by building with already tested and accessible solutions.
 								</p>
+								<p>
+									For further information please contact 
+									<a href="mailto:cmtedd.webmaster@act.gov.au" target="_blank">
+										cmtedd.webmaster@act.gov.au
+									</a>
+								</p>
 							</div>
 						</div>
 					</div>
