--- a/src/4-components/c2-content/c2-docs.stories.mdx
+++ b/src/4-components/c2-content/c2-docs.stories.mdx
@@ -69,7 +69,7 @@ import LinkTo from "@storybook/addon-links/react";
 								<ul>
 									<li>Keep breakers short and succinct, one sentence length</li>
 									<li>Use clear, concise and relevant language</li>
-									<li>use with consistent site theme colours  </li>
+									<li>use with consistent site theme colours </li>
 									<li>here</li>
 								</ul>
 								<h4>Do not</h4>
@@ -83,12 +83,15 @@ import LinkTo from "@storybook/addon-links/react";
 						<div className="act-col__cw-12">
 							<div className="act-box">
 								<h3>Key message</h3>
-								<p>The key message component can be used at the start of content pages to summarise the key points to help users find information quickly. They are designed to capture the attention of the user in a deliberately way on a specific page.</p>
+								<p>
+									The key message component can be used at the start of content pages to summarise the key points to help users find information quickly. They are designed to
+									capture the attention of the user in a deliberately way on a specific page.
+								</p>
 								<h4>Do</h4>
 								<ul>
 									<li>Keep key messages short and succinct (should be no longer than one sentence and a minimal number of dot points)</li>
 									<li>use clear, concise easy to understand language, to minimise cognitive load</li>
-									<li>use with consistent site theme colours  </li>
+									<li>use with consistent site theme colours </li>
 									<li>reserve the use of the critical alert for circumstances which warrant it</li>
 								</ul>
 								<h4>Do not</h4>
@@ -154,47 +157,12 @@ import LinkTo from "@storybook/addon-links/react";
 							</div>
 						</div>
 					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h3>Step list</h3>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h3>2 column content</h3>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-						<div className="act-col__cw-12">
-							<div className="act-box">
-								<h3>Text blocks</h3>
-							</div>
-						</div>
-					</div>
-					<div className="act-flex__row">
-    					<div className="act-col__cw-12">
-    						<div className="act-box">
-    							<LinkTo
-    								className="act-button act-button__primary act-button__default act-button__icon-left act-button__primary-undefined"
-    								kind="components-cards-docs"
-    							>
-    								View Component
-    								<i class="fa-solid fa-eye"></i>
-    							</LinkTo>
-    						</div>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </main>
-    <footer className="act-footer">
-    	<AoC />
-    	<Footer />
-    </footer>
-
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer className="act-footer">
+		<AoC />
+		<Footer />
+	</footer>
 </div>
