--- a/src/0-about/1-what-is-the-ds.stories.mdx
+++ b/src/0-about/1-what-is-the-ds.stories.mdx
@@ -70,15 +70,11 @@ import LinkTo from "@storybook/addon-links/react";
 								</p>
 								<h2>Acknowledgement</h2>
 								<p>
-									We acknowledge the advice and guidance supporting this design system has incorporated the NSW Government….{" "}
+									We acknowledge the advice and guidance provided by the NSW Government Digital{" "}
 									<a href="https://www.digital.nsw.gov.au/delivery/digital-service-toolkit/design-system" target="_blank" title="NSW Design System">
 										Design System
 									</a>{" "}
-									and the W3C’s{" "}
-									<a href="https://www.w3.org/WAI/WCAG21/Understanding/" target="_blank" title="W3C Web Content Accessibility Guidelines">
-										Web Content Accessibility Guidelines
-									</a>
-									.
+									and team which has informed the development of the ACT Government Web Design System.
 								</p>
 								<h2>Benefits</h2>
 								<h4>Build faster and at scale</h4>
